Enable aggregation of Surefire test reports using a two-command process
Surefire is only able to aggregate reports from a module's children,
however the children will always run after the parent. To aggregate the tests,
one must therefore first generate the test reports and then aggregate.
This can be done without rerunning tests using `mvn verify -fn; mvn site -DskipTests`.
The gitlab-CI-configuration has been changed to do this when generating Pages.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,9 +54,10 @@ spotbugs:
 pages:
   only:
     - master
+    - i33/fix-surefire-report
   script:
     - 'cd globingular'
-    - 'mvn $MAVEN_CLI_OPTS site'
+    - 'mvn $MAVEN_CLI_OPTS -fn verify; mvn $MAVEN_CLI_OPTS site -DskipTests' # Run tests first so surefire can aggregate reports
     - 'mv target/staging ../public'
   artifacts:
     paths:
