--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -379,10 +379,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <linkXRef>true</linkXRef>
-                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <id>report-test-aggregate</id>
+                        <inherited>false</inherited>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                        <configuration>
+                            <linkXRef>true</linkXRef>
+                            <!-- Note: to actually aggregate, one must run twice, as only child modules can be aggregated, -->
+                            <!-- but child modules are always run after the parent. Run twice efficiently like this: -->
+                            <!-- mvn -fn verify; mvn site -DskipTests -->
+                            <aggregate>true</aggregate>
+                        </configuration>
+                    </reportSet>
+                </reportSets>
             </plugin>
 
             <!-- Computing test coverage -->
