--- a/globingular/aggregator/pom.xml
+++ b/globingular/aggregator/pom.xml
@@ -13,17 +13,22 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>ui</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>persistence</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>it1901.gr2002.globingular</groupId>
+            <artifactId>restserver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it1901.gr2002.globingular</groupId>
+            <artifactId>restapi</artifactId>
         </dependency>
     </dependencies>
 
