--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -51,6 +51,27 @@
                 <version>0.0.2-SNAPSHOT</version>
             </dependency>
 
+            <!-- Globingular core module -->
+            <dependency>
+                <groupId>it1901.gr2002.globingular</groupId>
+                <artifactId>ui</artifactId>
+                <version>0.0.2-SNAPSHOT</version>
+            </dependency>
+
+            <!-- Globingular persistence module -->
+            <dependency>
+                <groupId>it1901.gr2002.globingular</groupId>
+                <artifactId>restserver</artifactId>
+                <version>0.0.2-SNAPSHOT</version>
+            </dependency>
+
+            <!-- Globingular core module -->
+            <dependency>
+                <groupId>it1901.gr2002.globingular</groupId>
+                <artifactId>restapi</artifactId>
+                <version>0.0.2-SNAPSHOT</version>
+            </dependency>
+
             <!-- Test with JUnit5 -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
