--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -196,9 +196,9 @@
 
             <!-- Dependency injection annotations -->
             <dependency>
-                <groupId>javax.inject</groupId>
-                <artifactId>javax.inject</artifactId>
-                <version>1</version>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
+                <version>2.0.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
