--- a/globingular/core/pom.xml
+++ b/globingular/core/pom.xml
@@ -14,6 +14,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
+            <version>14.0.1</version>
         </dependency>
 
         <!-- Test with JUnit5 -->
@@ -30,6 +31,8 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
+            <version>2.0.2-beta</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
