Fix specifications in as described in MR

--- a/globingular/ui/pom.xml
+++ b/globingular/ui/pom.xml
@@ -7,6 +7,11 @@
         <version>0.0.2-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <javafx.version>14.0.1</javafx.version>
+        <testfx.version>4.0.16-alpha</testfx.version>
+    </properties>
+
     <artifactId>ui</artifactId>
 
     <dependencies>
@@ -26,22 +31,22 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>14.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>14.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>14.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>14.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
@@ -65,13 +70,13 @@
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
-            <version>4.0.16-alpha</version>
+            <version>${testfx.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit5</artifactId>
-            <version>4.0.16-alpha</version>
+            <version>${testfx.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
