--- a/globingular/persistence/pom.xml
+++ b/globingular/persistence/pom.xml
@@ -7,6 +7,10 @@
         <version>0.0.2-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <jackson.version>2.11.2</jackson.version>
+    </properties>
+
     <artifactId>persistence</artifactId>
 
     <dependencies>
@@ -30,12 +34,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.11.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.2</version>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
