--- a/globingular/aggregator/pom.xml
+++ b/globingular/aggregator/pom.xml
@@ -13,6 +13,7 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>ui</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
