--- a/globingular/restapi/pom.xml
+++ b/globingular/restapi/pom.xml
@@ -34,6 +34,10 @@
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>it1901.gr2002.globingular</groupId>
+            <artifactId>persistence</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
