Try to implement some simple testing of restapi using mockito

--- a/globingular/restapi/pom.xml
+++ b/globingular/restapi/pom.xml
@@ -34,6 +34,22 @@
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
         </dependency>
+
+        <!-- Test with JUnit5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
+
+        <!-- Mockito for test -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
