--- a/globingular/aggregator/pom.xml
+++ b/globingular/aggregator/pom.xml
@@ -13,23 +13,27 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>ui</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>persistence</artifactId>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>restserver</artifactId>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>restapi</artifactId>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 
