--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -25,6 +25,9 @@
         <!-- Adding -DenableTestRedirect=false to maven commands will disable redirecting output to file, showing the stacktrace in terminal -->
         <!-- Note that if tests are run in parallel (using the <forkCount> option) the output will be interweaved -->
         <enableTestRedirect>true</enableTestRedirect>
+
+        <jakarta.ws.rs.api.version>3.0.0-M1</jakarta.ws.rs.api.version>
+        <parent.version>0.0.2-SNAPSHOT</parent.version>
     </properties>
 
     <!-- Actual location for GitLab Pages instance, relativizes any absolute site links -->
@@ -42,34 +45,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Globingular core module -->
-            <dependency>
-                <groupId>it1901.gr2002.globingular</groupId>
-                <artifactId>core</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
-            </dependency>
-
-            <!-- Globingular persistence module -->
-            <dependency>
-                <groupId>it1901.gr2002.globingular</groupId>
-                <artifactId>persistence</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
-            </dependency>
-
-            <!-- Globingular restserver module -->
-            <dependency>
-                <groupId>it1901.gr2002.globingular</groupId>
-                <artifactId>restserver</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
-            </dependency>
-
-            <!-- Globingular restapi module -->
-            <dependency>
-                <groupId>it1901.gr2002.globingular</groupId>
-                <artifactId>restapi</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
-            </dependency>
-
             <!-- Test with JUnit5 -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -82,13 +57,6 @@
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>5.4.2</version>
                 <scope>test</scope>
-            </dependency>
-
-            <!-- Java JAX-RS-API (standard for REST APIs) -->
-            <dependency>
-                <groupId>jakarta.ws.rs</groupId>
-                <artifactId>jakarta.ws.rs-api</artifactId>
-                <version>3.0.0-M1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
