--- a/globingular/restapi/pom.xml
+++ b/globingular/restapi/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>${jakarta.ws.rs.api.version}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
@@ -32,6 +33,7 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 
