--- a/globingular/restserver/pom.xml
+++ b/globingular/restserver/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>restapi</artifactId>
+            <version>${parent.version}</version>
         </dependency>
 
         <!-- Test with JUnit5 -->
@@ -63,15 +64,18 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>persistence</artifactId>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
+            <version>${parent.version}</version>
         </dependency>
 
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>${jakarta.ws.rs.api.version}</version>
         </dependency>
     </dependencies>
     <build>
