--- a/globingular/ui/pom.xml
+++ b/globingular/ui/pom.xml
@@ -19,12 +19,14 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
+            <version>${parent.version}</version>
         </dependency>
 
         <!-- Globingular persistence module -->
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>persistence</artifactId>
+            <version>${parent.version}</version>
         </dependency>
 
         <!-- JavaFX -->
