--- a/globingular/persistence/pom.xml
+++ b/globingular/persistence/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Test with JUnit5 -->
