--- a/globingular/restserver/pom.xml
+++ b/globingular/restserver/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>restapi</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Test with JUnit5 -->
@@ -64,12 +64,12 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>persistence</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
