--- a/globingular/restapi/pom.xml
+++ b/globingular/restapi/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
             <artifactId>persistence</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
