Make first wave of changes according to in-person review of MR !67
- Extract Mockito-version into maven-property
- Merge two-liners in GlobingularModule, unnecessary to store usernameLowercase as a variable
- A few minor JavaDoc changes

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -31,6 +31,7 @@
         <checkstyle.version>3.1.1</checkstyle.version>
         <spotbugs.version>4.0.4</spotbugs.version>
         <jacoco.version>0.8.5</jacoco.version>
+        <mockito.version>2.0.2-beta</mockito.version>
     </properties>
 
     <!-- Actual location for GitLab Pages instance, relativizes any absolute site links -->
