Set Maven to clean the correct directory
Data folder was changed in commit 90277f43

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -75,7 +75,7 @@
                     <configuration>
                         <filesets>
                             <fileset>
-                                <directory>${user.home}/temp/globingular</directory>
+                                <directory>${user.home}/globingular</directory>
                                 <followSymlinks>false</followSymlinks>
                             </fileset>
                         </filesets>
