--- a/globingular/restapi/pom.xml
+++ b/globingular/restapi/pom.xml
@@ -54,7 +54,7 @@
         <!-- Mockito for test -->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
         </dependency>
     </dependencies>
