--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <package>globingular.ui</package>
+        <ui.main>globingular.ui.App</ui.main>
         <restserver.main>globingular.restserver.Main</restserver.main>
 
         <!-- Adding -Dfast to maven commands will speed up the process by skipping tests, checkstyle and spotbugs -->
