--- a/globingular/integrationtests/pom.xml
+++ b/globingular/integrationtests/pom.xml
@@ -13,6 +13,7 @@
     <packaging>war</packaging>
 
     <properties>
+        <jetty.port>8081</jetty.port>
     </properties>
 
     <dependencies>
