--- a/globingular/integrationtests/pom.xml
+++ b/globingular/integrationtests/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it1901.gr2002.globingular</groupId>
         <artifactId>parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>integrationtests</artifactId>
