--- a/globingular/ui/pom.xml
+++ b/globingular/ui/pom.xml
@@ -8,6 +8,8 @@
     </parent>
 
     <properties>
+        <ui.main>globingular.ui.App</ui.main>
+
         <javafx.version>14.0.1</javafx.version>
         <testfx.version>4.0.16-alpha</testfx.version>
     </properties>
